@@ -2,6 +2,8 @@ v3.8
 -----
 : Fixed a bug where bundle savings weren't calculating correctly in some currencies.  Thanks zr40!
 : Updated Russian translation
++ Using new api.enhancedsteam.com web calls for external data, which is faster and more secure
++ Added a "Total size of all games" to your "All Games" tab
 
 v3.7
 -----
